RESOLVED FIXED57719
REGRESSION (r82786): Media controls render incorrectly on GTK and Qt
https://bugs.webkit.org/show_bug.cgi?id=57719
Summary REGRESSION (r82786): Media controls render incorrectly on GTK and Qt
mitz
Reported 2011-04-02 22:24:58 PDT
REGRESSION (r82786): Media controls render incorrectly on GTK and Qt
Attachments
Fix incorrect assumption in RenderMediaControlTimeDisplay::layout() (1.84 KB, patch)
2011-04-02 22:37 PDT, mitz
mjs: review+
mitz
Comment 1 2011-04-02 22:37:03 PDT
Created attachment 87997 [details] Fix incorrect assumption in RenderMediaControlTimeDisplay::layout()
Maciej Stachowiak
Comment 2 2011-04-02 22:39:42 PDT
Comment on attachment 87997 [details] Fix incorrect assumption in RenderMediaControlTimeDisplay::layout() r=me
mitz
Comment 3 2011-04-02 22:41:51 PDT
Note You need to log in before you can comment on or make changes to this bug.